--- a/flask_server/Dockerfile
+++ b/flask_server/Dockerfile
@@ -9,6 +9,7 @@ COPY requirements.txt /code/
 RUN python -m pip install -r requirements.txt
 
 ENV FLASK_APP=flask_server
+ENV FLASK_RUN_HOST=0.0.0.0
 
 COPY . /code/
 
