--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       - .:/code
     depends_on: 
       - mongodb
+    ports:
+      - "5000:5000"
     environment: 
       APP_ENV: "dev"
       APP_DEBUG: "True"
